src/website/components/header/style.scss
.tatva-header {
    padding: 12px 20px;
    background-color: #1f1f1f !important;
    position: sticky !important;
    border-radius: 0% !important;
    top: 0;
    z-index: 14;
}

.tatva_container .header_cont {
    width: 1200px;
    margin: auto;
}

.not-sticky {
    padding: 12px 3vw;
    background-color: #1f1f1f !important;
    border-radius: 0% !important;
}

.none {
    display: none !important;
}

@media only screen and (max-width:820px) {
    .header_cont {
        width: 100% !important;
    }
}

@media only screen and (max-width:480px) {
    .tatva-header-button .components-button {
        font-size: 10px;
    }

    .tatva-site-logo svg {
        width: 120px;
    }
}

